compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_sized_unaligned.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 489
expression: "\npub fn go(x) {\n  let assert <<a:17, b:7>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<a:17, b:7>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let a;
  let b;
  if (x.bitSize >= 17 && x.bitSize === 24) {
    a = bitArraySliceToInt(x, 0, 17, true, false);
    b = bitArraySliceToInt(x, 17, 24, true, false);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 46, pattern_start: 29, pattern_end: 42 }
    )
  }
  return x;
}
