compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_unsigned_constant_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 564
expression: "\npub fn go(x) {\n  let assert <<-2:unsigned>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<-2:unsigned>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  throw makeError(
    "let_assert",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "Pattern match failed, no pattern matched the value.",
    { value: x, start: 18, end: 48, pattern_start: 29, pattern_end: 44 }
  )
  return x;
}
