compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_utf8.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 286
expression: "\npub fn go(x) {\n  let assert <<\"Gleam 👍\":utf8>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<"Gleam 👍":utf8>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (!(
    x.bitSize === 80 &&
    x.byteAt(0) === 71 &&
      x.byteAt(1) === 108 &&
      x.byteAt(2) === 101 &&
      x.byteAt(3) === 97 &&
      x.byteAt(4) === 109 &&
      x.byteAt(5) === 32 &&
      x.byteAt(6) === 240 &&
      x.byteAt(7) === 159 &&
      x.byteAt(8) === 145 &&
      x.byteAt(9) === 141
  )) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 54, pattern_start: 29, pattern_end: 50 }
    )
  }
  return x;
}
