compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_utf8_with_escape_chars.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 275
expression: "\npub fn go(x) {\n  let assert <<\"\\\"\\\\\\r\\n\\t\\f\\u{1f600}\">> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<"\"\\\r\n\t\f\u{1f600}">> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (!(
    x.bitSize === 80 &&
    x.byteAt(0) === 34 &&
      x.byteAt(1) === 92 &&
      x.byteAt(2) === 13 &&
      x.byteAt(3) === 10 &&
      x.byteAt(4) === 9 &&
      x.byteAt(5) === 12 &&
      x.byteAt(6) === 240 &&
      x.byteAt(7) === 159 &&
      x.byteAt(8) === 152 &&
      x.byteAt(9) === 128
  )) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 60, pattern_start: 29, pattern_end: 56 }
    )
  }
  return x;
}
