compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__negative_size_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1962
expression: "\npub fn go(x) {\n  let n = -10\n  case x {\n    <<int:size(n)>> -> int\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = -10
  case x {
    <<int:size(n)>> -> int
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  let n = -10;
  if (n >= 0 && x.bitSize === n) {
    let int = bitArraySliceToInt(x, 0, n, true, false);
    return int;
  } else {
    return 2;
  }
}
